# v2ray-finder-dotnet

./: .gitignore  CHANGELOG.md  CONVENTIONS.md  README.de.md  README.en.md  README.fa.md  README.md  V2RayFinder.sln  V2RayFinderBlazor.sln  pyproject.toml
.github/workflows/: autoformat.yml  gh-pages.yml  lint.yml  tests.yml
src/V2RayFinder.Blazor/: App.razor  Program.cs  V2RayFinder.Blazor.csproj  _Imports.razor
src/V2RayFinder.Blazor/Pages/: Home.razor
src/V2RayFinder.Blazor/Properties/: launchSettings.json
src/V2RayFinder.Blazor/wwwroot/: index.html  service-worker.js
src/V2RayFinder.Blazor/wwwroot/css/: app.css
src/V2RayFinder.Cli/: Program.cs  V2RayFinder.Cli.csproj
src/V2RayFinder.Core/: ConfigParser.cs  ConfigScorer.cs  HealthChecker.cs  Pipeline.cs  SubscriptionFetcher.cs  SubscriptionSources.cs
src/V2RayFinder.Core.Wasm/: ConfigParser.cs  ConfigScorer.cs  Models.cs  SubscriptionSources.cs  V2RayFinder.Core.Wasm.csproj  WasmFetcher.cs  WasmPipeline.cs
src/V2RayFinder.Core/Models/: Models.cs
src/v2ray_finder/: __init__.py  async_fetcher.py  cli.py  cli_rich.py  core.py  exceptions.py  health_checker.py  normalizer.py  pipeline.py  probes.py  scorer.py  scoring_curves.py  source_registry.py  sources.py  xray_config_adapter.py  xray_connectivity.py  xray_runner.py
src/v2ray_finder/gui/: main_window.py
tests/: test_cache.py  test_cli_pipeline.py  test_cli_rich.py  test_error_handling.py  test_find_servers.py  test_gui.py  test_health_checker.py  test_imports.py  test_normalizer.py  test_pipeline.py  test_pipeline_cache_stats.py  test_pipeline_error_model.py  test_pipeline_source_attribution.py  test_scorer.py  test_servers_from_sources.py  test_servers_with_health.py  test_source_registry.py  test_stop_mechanism.py  test_xray_config_adapter.py  test_xray_connectivity.py  test_xray_retry.py  test_xray_runner.py
tests/V2RayFinder.Tests/: CoreTests.cs  V2RayFinder.Tests.csproj
